--- a/src/duy-anh-mart/duy-anh-mart.html
+++ b/src/duy-anh-mart/duy-anh-mart.html
@@ -279,7 +279,7 @@
   </div>
 
   <div class="hiddenFooterContainer">
-    <div>
+    <div style="display: none">
       <label class="item" for="uploadDatabase">Upload</label>
       <input
         type="file"
